<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noitems_text">No items</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">Unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">°C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AD + USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices for %1$s seconds…</string>
    <string name="bluetooth_not_discoverable">Not visible to other Bluetooth devices</string>
    <string name="bluetooth_lock_voice_dialing">Disable voice dialling</string>
    <string name="bluetooth_lock_voice_dialing_summary">Disable Bluetooth voice dialling when screen is locked</string>
    <string name="bluetooth_devices">AVAIABLE DEVICES</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan</string>
    <string name="bluetooth_disconnect_blank" />
    <string name="bluetooth_connected" />
    <string name="bluetooth_disconnected" />
    <string name="bluetooth_disconnecting" />
    <string name="bluetooth_connecting" />
    <string name="bluetooth_unknown" />
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_paired">Paired but not connected</string>
    <string name="bluetooth_device">Handsfree/headset</string>
    <string name="progress_scanning" />
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Select to pair with</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_permission_request">Bluetooth permission request</string>
    <string name="bluetooth_ask_enablement">Application requests to turn on Bluetooth. Continue?</string>
    <string name="bluetooth_ask_discovery">Application requests to make your device visible to other Bluetooth devices for %1$d seconds. Continue?</string>
    <string name="bluetooth_ask_enablement_and_discovery">Application requests to turn on Bluetooth and to make your device visible to other devices for %1$d seconds. Continue?</string>
    <string name="bluetooth_turning_on">Turning on Bluetooth…</string>
    <string name="bluetooth_scan_text">Empty button…</string>
    <string name="bluetooth_settings_text">Empty button…</string>
    <string name="bluetooth_enable_text">Empty button…</string>
    <string name="bluetooth_device_info_connectButton_text">Turn on Bluetooth</string>
    <string name="bluetooth_device_info_deviceInfo_text" />
    <string name="bluetooth_connection_permission_request">Bluetooth connection request</string>
    <string name="bluetooth_connection_notif_message">Touch to connect to \"%1$s\"</string>
    <string name="bluetooth_connection_dialog_text">Do you want to connect to \"%1$s\"?</string>
    <string name="date_and_time">Date and time</string>
    <string name="date_time_12_hour_sample">1:00 PM</string>
    <string name="date_time_24_hour_sample">13:00</string>
    <string name="date_time_changeTime_text">Change time</string>
    <string name="date_time_changeDate_text">Date</string>
    <string name="choose_timezone">Select time zone</string>
    <string name="default_date_format">MM/dd/yyyy</string>
    <string name="normal_date_format">Normal (%s)</string>
    <string name="display_preview_label">Preview:</string>
    <string name="display_font_size_label">Font size:</string>
    <string name="intent_sender_data_label">Data:</string>
    <string name="intent_sender_sendbroadcast_text">Send broadcast</string>
    <string name="intent_sender_action_label">Action:</string>
    <string name="intent_sender_startactivity_text">Start activity</string>
    <string name="intent_sender_resource_label">Resource:</string>
    <string name="intent_sender_account_label">Account:</string>
    <string name="proxy_clear_text">Clear</string>
    <string name="proxy_port_label">Port</string>
    <string name="proxy_defaultView_text">Restore defaults</string>
    <string name="proxy_action_text">Save</string>
    <string name="proxy_hostname_label">Hostname</string>
    <string name="proxy_error">Attention</string>
    <string name="settings_label_launcher">Settings</string>
    <string name="date_and_time_settings_title">Date and time</string>
    <string name="screen_display">Lock screen</string>
    <string name="home_screen">HOME SCREEN</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="lock_screen">LOCK SCREEN</string>
    <string name="clock_position">Clock position</string>
    <string name="security_settings_title">Security</string>
    <string name="sound_settings_title">Sound</string>
    <string name="display_settings_title">Display</string>
    <string name="sync_settings">Accounts and sync</string>
    <string name="storage_settings">Storage</string>
    <string name="call_settings_title">Call</string>
    <string name="about_settings">About device</string>
    <string name="applications_settings">Application manager</string>
    <string name="language_settings">Language and input</string>
    <string name="accessibility_settings">Accessibility</string>
    <string name="voice_input_output_settings">S Voice</string>
    <string name="privacy_settings">Backup and reset</string>
    <string name="certificate_settings_title">Certificates</string>
    <string name="certificate_view_serial">Serial number</string>
    <string name="certificate_view_issuer">Issuer</string>
    <string name="certificate_view_startdate">Valid from</string>
    <string name="certificate_view_finaldate">Valid until</string>
    <string name="certificate_view_subject">Subject</string>
    <string name="certificate_view_publickey">Public key</string>
    <string name="certificate_view_signature">Signature algorithm</string>
    <string name="customizedkey_settings_title">Customised keys</string>
    <string name="settings_ics_radio">NETWORK CONNECTIONS</string>
    <string name="settings_ics_device">SOUND AND DISPLAY</string>
    <string name="tw_more">More networks</string>
    <string name="tw_rom">Advanced</string>
    <string name="tw_battery">Battery</string>
    <string name="data_quick_toggle_title">Data usage</string>
    <string name="power_saving">Power saving</string>
    <string name="accounts">USER AND BACKUP</string>
    <string name="display_clock">Clock</string>
    <string name="display_clock_summary">Show clock on lock screen</string>
    <string name="display_weather">Weather</string>
    <string name="display_weather_summary">Show weather on lock screen</string>
    <string name="display_weather_settings">Weather settings</string>
    <string name="display_weather_settings_summary">Set refresh interval, and thermometer unit</string>
    <string name="personal_settings_tab">Device</string>
    <string name="program_settings_tab">General</string>
    <string name="settings_ics_system">PERMISSIONS</string>
    <string name="lk_settings_title">Lock screen</string>
    <string name="hs_settings_title">Easy mode</string>
    <string name="radio_spacecake">NETWORK CONNECTIONS</string>
    <string name="spacecake_more">More networks</string>
    <string name="multi">Multi window</string>
    <string name="uau">Wallpaper</string>
    <string name="toggles">Notification panel</string>
    <string name="personalization">PERSONALIZATION</string>
    <string name="help">Help</string>
    <string name="apps">APPLICATIONS</string>
</resources>