<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/settings_label_launcher" android:key="parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceCategory android:title="@string/radio_spacecake" />
    <com.android.settings.IconCheckBoxPreference android:title="Wi-Fi" android:key="toggle_wifi" settings:icon="@drawable/ic_settings_wireless" />
    <com.android.settings.IconCheckBoxPreference android:title="Bluetooth" android:key="toggle_bluetooth" settings:icon="@drawable/ic_settings_bluetooth2" />
    <com.android.settings.IconPreferenceScreen android:title="@string/data_quick_toggle_title" settings:icon="@drawable/ic_settings_data">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.Settings" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/spacecake_more" settings:icon="@drawable/ic_settings_more">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.WirelessSettings" />
    </com.android.settings.IconPreferenceScreen>
    <PreferenceCategory android:title="@string/settings_ics_device" />
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/sound_settings_title" settings:icon="@drawable/ic_settings_sound">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.SoundSettings" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/display_settings_title" settings:icon="@drawable/ic_settings_display">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.DisplaySettings" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/uau" android:key="wallpapers_settings" settings:icon="@drawable/ic_settings_wallpaper">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.LockScreenWallpaper" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/lk_settings_title" android:key="lk_display" settings:icon="@drawable/ic_lk_display">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.ScreenDisplay" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/multi" android:key="multiwindow_option" settings:icon="@drawable/ic_multi">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.spacecaker.coee.mws.ImageSpace" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/toggles" settings:icon="@drawable/ic_setting_notificationpanel">
        <intent android:targetPackage="com.spacecakers.text.custtext" android:action="android.intent.action.MAIN" android:targetClass="com.spacecakers.text.custtext.CustomSettings" />
    </com.android.settings.IconPreferenceScreen>
    <PreferenceCategory android:title="@string/personalization" />
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/hs_settings_title" android:key="hs_display" settings:icon="@drawable/ic_hs_display">
        <intent android:targetPackage="com.cooee.launcherS4" android:action="android.intent.action.MAIN" android:targetClass="com.iLoong.launcher.SetupMenu.Actions.DesktopAction$DesktopSettingActivity" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/accessibility_settings" settings:icon="@drawable/ic_settings_accessibility">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.AccessibilitySettings" />
    </com.android.settings.IconPreferenceScreen>
    <PreferenceCategory android:title="@string/accounts" android:key="manageAccountsCategory" />
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/sync_settings" android:key="sync_settings" settings:icon="@drawable/ic_settings_sync">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/privacy_settings" android:key="privacy_settings" settings:icon="@drawable/ic_settings_privacy">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.PrivacySettings" />
    </com.android.settings.IconPreferenceScreen>
    <PreferenceCategory android:title="@string/settings_ics_system" />
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/language_settings" settings:icon="@drawable/ic_settings_language">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.LanguageSettings" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/date_and_time_settings_title" settings:icon="@drawable/ic_settings_date_time">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.DateTimeSettings" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/tw_battery" settings:icon="@drawable/ic_settings_battery">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.fuelgauge.PowerUsageSummary" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/power_saving" settings:icon="@drawable/ic_settings_quickpanel_quick">
        <intent android:targetPackage="com.lidroid.toolbox" android:action="com.lidroid.toolbox.POWERSAVEMODE" android:targetClass="com.lidroid.toolbox.powersaving.PowerSavingActivity" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/storage_settings" settings:icon="@drawable/ic_settings_storage">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.deviceinfo.Memory" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/security_settings_title" android:key="security_settings_chooser" settings:icon="@drawable/ic_settings_security">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.SecuritySettings" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/help" settings:icon="@drawable/ic_help">
        <intent android:targetPackage="com.touchwiz.Resurection" android:action="android.intent.action.MAIN" android:targetClass="com.touchwiz.Resurection.TwDevelopers" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/tw_rom" settings:icon="@drawable/quickpanelicon">
        <intent android:targetPackage="com.lidroid.parts" android:action="android.intent.action.MAIN" android:targetClass="com.lidroid.parts.MainActivity" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:background="#ff003c4e" android:title="@string/about_settings" settings:icon="@drawable/ic_settings_about">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.DeviceInfoSettings" />
    </com.android.settings.IconPreferenceScreen>
    <PreferenceCategory android:title="@string/apps" />
    <com.android.settings.IconPreferenceScreen android:title="@string/applications_settings" android:key="applications_settings" settings:icon="@drawable/ic_settings_applications">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.ApplicationSettings" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/call_settings_title" android:key="call_settings" settings:icon="@drawable/ic_settings_call">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CallFeaturesSetting" />
    </com.android.settings.IconPreferenceScreen>
    <com.android.settings.IconPreferenceScreen android:title="@string/voice_input_output_settings" settings:icon="@drawable/ic_settings_speech">
        <intent android:targetPackage="com.android.settings" android:action="android.intent.action.MAIN" android:targetClass="com.android.settings.VoiceInputOutputSettings" />
    </com.android.settings.IconPreferenceScreen>
</PreferenceScreen>